# ocl-lights

./: .gitmodules  CMakeLists.txt  README.md
kernels/: types.h  utils.h
kernels/buffers/GPU/: fill.cl
kernels/lights/: common.h
kernels/lights/GPU/: geometry.cl  lightning.cl
main/: CMakeLists.txt  app.cpp  app.h  data.cpp  data.h  geometry.cpp  geometry.h  main.cpp  ui.cpp  ui.h
src/: CMakeLists.txt
src/cg_opencl/: CMakeLists.txt  oclBaseManager.cpp  oclBaseManager.h  oclCommon.cpp  oclCommon.h  oclConstants.h  oclProfiler.cpp  oclProfiler.h  renderer.cpp  renderer.h
